--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "^4.10.0",
-        "guzzlehttp/guzzle": "^5.3.1|^6.2.1|^7"
+        "silverstripe/framework": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "php-http/guzzle7-adapter": "^1",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "scripts": {
@@ -39,7 +39,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.1.x-dev"
+            "dev-master": "5.0.x-dev"
         }
     },
     "replace": {
